--- a/login.html
+++ b/login.html
@@ -10,22 +10,21 @@
 
 <body>
 	
-<div class = from-countainer>
-	  <h2>登录</h2>
-     <form id="loginForm">
+  <div class="form-container">
+    <h2>登录</h2>
+    <form id="loginForm">
       <div class="form-group">
-		<label for="username">用户名</label>
-			<input type="text" id="username" placeholder="请输入用户名" required>
-		</div>
-		<div class="form-group">
+        <label for="username">用户名</label>
+        <input type="text" id="username" placeholder="请输入用户名" required>
+      </div>
+      <div class="form-group">
         <label for="password">密码</label>
-			<input type="password" id="password" placeholder="请输入密码" required>
+        <input type="password" id="password" placeholder="请输入密码" required>
       </div>
       <button type="submit" onclick="window.location.href='tiaozhuan.html';">登录</button>
     </form>
     <p>还没有账号？<a href="register.html">注册</a></p>
   </div>
-   
 </body>
 
 </html>
